objects/TriageCriteria__c.object
<CustomObject>
    <description>SFDC1-7557, This object is to store Case routing criteria and subsequent actions.</description>
    <fields>
        <fullName>CalculatedSortOrder__c</fullName>
        <description>SFDC1-7557, Formula to calculate the complexity of the rule</description>
        <formula>If(ISBLANK(Subject__c),0,1)+
If(ISBLANK(Type__c),0,1)+
If(ISBLANK(Subtype__c),0,1)+
If(ISBLANK(WebEmail__c),0,1)+
If(ISBLANK(SkillLevel__c),0,1)+
If(ISBLANK( ProductFamily__c ),0,1)+
If(ISBLANK( ProductGroup__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rule Complexity</inlineHelpText>
        <label>Calculated Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractRecordType__c</fullName>
        <description>SFDC-3388 Implementation cases</description>
        <label>Contract Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Form</fullName>
                </value>
                <value>
                    <fullName>Continuation Letter</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                    <isActive>false</isActive>
                    <label>Consulting</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SFDC1-5947, to see if rule is active or not.</description>
        <inlineHelpText>Rule will be evaluated when the value is checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoadingGroupCategory__c</fullName>
        <formula>LoadingGroup__r.LoadingGroupCategory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loading Group Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadingGroupNumber__c</fullName>
        <formula>LoadingGroup__r.LoadingGroupNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loading Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadingGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-3388 Implementation Cases</description>
        <inlineHelpText>Implementation case assignment based on Loading Group</inlineHelpText>
        <label>Loading Group</label>
        <referenceTo>LoadingGroup__c</referenceTo>
        <relationshipLabel>Triage Criteria</relationshipLabel>
        <relationshipName>TriageCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>SFDC1-5947, Priority of this rule.</description>
        <inlineHelpText>Priority of this rule (1 being highest and being evaluated first).</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7557 Product Family for case comparison</description>
        <inlineHelpText>Product Family</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Triage Criteria</relationshipLabel>
        <relationshipName>TriageCriteriaProductFamily</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7557 Product group for comparing case</description>
        <inlineHelpText>Product Group</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Triage Criteria</relationshipLabel>
        <relationshipName>TriageCriteriaProductGroup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>SFDC1-7557 Queues to which case will be assigned</description>
        <inlineHelpText>Queue to which case will be assigned</inlineHelpText>
        <label>Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Ad Claims Approver Queue</fullName>
                </value>
                <value>
                    <fullName>Aerospace, Defense, Security - Americas</fullName>
                </value>
                <value>
                    <fullName>Aerospace, Defense, Security - APAC</fullName>
                </value>
                <value>
                    <fullName>Aerospace, Defense, Security - EMEA</fullName>
                </value>
                <value>
                    <fullName>AG | Onboarding</fullName>
                </value>
                <value>
                    <fullName>AGRI Connect</fullName>
                </value>
                <value>
                    <fullName>Allspring</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>APAC WRF</fullName>
                </value>
                <value>
                    <fullName>Australia WRF</fullName>
                </value>
                <value>
                    <fullName>Auto Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Automotive - Americas</fullName>
                </value>
                <value>
                    <fullName>Automotive - APAC</fullName>
                </value>
                <value>
                    <fullName>Automotive - EMEA</fullName>
                </value>
                <value>
                    <fullName>automotiveMastermind - Americas</fullName>
                </value>
                <value>
                    <fullName>automotiveMastermind - APAC</fullName>
                </value>
                <value>
                    <fullName>automotiveMastermind - EMEA</fullName>
                </value>
                <value>
                    <fullName>Automotive Operations Architecture</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Aftermarket Production - PNA</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Analytical Solutions - EU</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Application Support - EU</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Application Support - PNA</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Business Analysis Team - EU</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Commercial Production - PNA</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Data Analysis - EU</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Dataium</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Data Onboarding – EU</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Data Quality Team - EU</fullName>
                </value>
                <value>
                    <fullName>AUTOS | Data Team - EU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SkillLevel__c</fullName>
        <description>SFDC1-7557, Skill Level to be compared.</description>
        <inlineHelpText>Skill Level to be compared.</inlineHelpText>
        <label>Skill Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>SFDC1-7557, Subject to be compared for Case</description>
        <inlineHelpText>Subject to be compared for Case</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>SFDC1-7557, Case Subtype to be compared.</description>
        <inlineHelpText>Case Subtype to be compared.</inlineHelpText>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>SFDC1-7557, Case Type to be compared.</description>
        <inlineHelpText>Case Type to be compared.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebEmail__c</fullName>
        <description>SFDC1-7557 Web Email for comparison</description>
        <inlineHelpText>Web Email</inlineHelpText>
        <label>Web Email</label>
        <type>Email</type>
    </fields>
    <label>Triage Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Queue__c</columns>
        <columns>ProductGroup__c</columns>
        <columns>SkillLevel__c</columns>
        <columns>Subject__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FM_MW_All_Other</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>FM | MW | Book Updates</value>
        </filters>
        <label>FM | MW | All Other</label>
    </listViews>
    <listViews>
        <fullName>ImplementationCaseRule</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>LoadingGroup__c</columns>
        <columns>LoadingGroupNumber__c</columns>
        <columns>LoadingGroupCategory__c</columns>
        <columns>Queue__c</columns>
        <columns>ContractRecordType__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LoadingGroup__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TriageCriteria__c.Markit</value>
        </filters>
        <label>Implementation Case Rule</label>
    </listViews>
    <listViews>
        <fullName>ProjectBobcat_TriageCriteria</fullName>
        <filterScope>Queue</filterScope>
        <label>Project Bobcat</label>
        <queue>ProjectBobcat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TriageForMarkit</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>SkillLevel__c</columns>
        <columns>ProductGroup__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TriageCriteria__c.Markit</value>
        </filters>
        <label>Triage for Markit</label>
    </listViews>
    <listViews>
        <fullName>TriageForPOLK</fullName>
        <columns>NAME</columns>
        <columns>ProductGroup__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue__c</columns>
        <columns>SkillLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TriageCriteria__c.POLK</value>
        </filters>
        <label>Triage for POLK</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TriageforIHS_TriageCriteria</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>SkillLevel__c</columns>
        <columns>ProductGroup__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TriageCriteria__c.IHS</value>
        </filters>
        <label>Triage for IHS</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TriageforMarkitSERV_TriageCriteria</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TriageCriteria__c.MarkitSERV</value>
        </filters>
        <label>Triage for MarkitSERV</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TRC-{000000}</displayFormat>
        <label>Triage Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Triage Criteria</pluralLabel>
    <recordTypes>
        <fullName>IHS</fullName>
        <active>true</active>
        <description>Record type for Triage object to manage IHS case assignment rules for Customer Care cases</description>
        <label>IHS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Markit</fullName>
        <active>true</active>
        <description>Record type for Triage object to manage Markit case assignment rules for Customer Care cases</description>
        <label>Markit</label>
    </recordTypes>
    <recordTypes>
        <fullName>MarkitSERV</fullName>
        <active>true</active>
        <description>Record type for Triage object to manage Markit SERV case assignment rules for Customer Care cases</description>
        <label>MarkitSERV</label>
    </recordTypes>
    <recordTypes>
        <fullName>POLK</fullName>
        <active>true</active>
        <description>Record type for Triage object to manage POLK case assignment rules for Customer Care cases</description>
        <label>POLK</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PriorityMandatoryForTriageRule</fullName>
        <active>true</active>
        <description>SFDC1-7557 This rule mandates user to add priority of triage rule.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.TriageCriteria__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISBLANK(Priority__c)
)</errorConditionFormula>
        <errorDisplayField>Priority__c</errorDisplayField>
        <errorMessage>Please specify priority of the rule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QueueMandatoryForTriageRule</fullName>
        <active>true</active>
        <description>SFDC1-7557 This rule mandates user to add queue for triage rule.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.TriageCriteria__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISBLANK(TEXT(Queue__c))
)</errorConditionFormula>
        <errorDisplayField>Queue__c</errorDisplayField>
        <errorMessage>Please specify Queue for the rule. In case a match is found, case will be assigned to this queue.</errorMessage>
    </validationRules>
</CustomObject>